# MasterThesis-DorisAnalysis

./: .gitignore  404.html  LICENSE  PROJECT_MAP.md  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build.yml  deploy.yml
LaTeX/: literatura.bib  main.tex  mystyle.bst  prilohy.tex  thesiscvut.sty  zkratky.tex
LaTeX/tables/results/satellites/: gop_vs_ssa_satellites_doy001-doy030_hermite_rms.tex
LaTeX/tex/: 1-uvod.tex  2-reserse.tex  3-teorie-casove-rady.tex  4-teorie-drahy-druzic.tex  5-implementace.tex  6-testovani.tex  7-vysledky.tex  8-zaver.tex
doc/: mkdocs.yml
doc/docs_src/: index.md  input.md  installation.md  orbits.md  output.md  stations.md  structure.md  usage.md
input/: index.html
installation/: index.html
notebooks/.claude/: translate_comments.py
notebooks/satellites/: RMS_SATELLITES.ipynb  compare_orbit_solutions_bernese.ipynb  compare_orbit_solutions_hermite.ipynb  download_cddis.ipynb  download_local.ipynb  download_ssh.ipynb  hermite_bernese_comparison.ipynb
notebooks/stations/: Jump_detection.ipynb  Jump_detection_with_doris.ipynb  Tabulka_trend.ipynb  discontinuity_detection.ipynb  download_cddis.ipynb  login.txt  spectral_analysis.ipynb  spectral_analysis_pokus2.ipynb  trend_detection.ipynb  trend_detection_load_with_doris.ipynb
notebooks/tests/: dynamic_parametrisation_accuracy.ipynb  hermite_interpolation_accuracy.ipynb  periodograms_test.ipynb  results_df.csv
orbits/: index.html
output/: index.html
search/: search_index.json
src/doris/_utils/: _decompress.py  _paths.py
stations/: index.html
structure/: index.html
(+189 files in other folders)
