[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doris-analysis"
version = "0.1.0"
description = "Python library for DORIS data analysis"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "paramiko",
    "unlzw3",
    "pandas",
    "numpy",
    "tqdm",
    "astropy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]